streamsynchronizer: If a stream belongs to an already running stream, don't wait

This fixes enabling visualizations after the audio stream already started.

https://bugzilla.gnome.org/show_bug.cgi?id=697820